# MongoDB_HW10

./: main.py  pyproject.toml  readme.md  task.md
database/: models.py  repository.py
seed/: init_owner.py
