[tool.poetry]
name = "hw10-2"
version = "0.1.0"
description = ""
authors = ["Alexey Vedmedev <al.vedmedev@gmail.com>"]
readme = "README.md"
packages = [{include = "hw10_2"}]

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.0.1"
mongoengine = "^0.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
